# unigraph

./: CMakeLists.txt  Unigraph.cmake  UnigraphDictionary.cmake  UnigraphReport.cmake  UnigraphTestFramework.cmake  UnigraphUnit.cmake  UnigraphUtil.cmake  UnigraphViz.cmake  unigraph-mode.el
example/: CMakeLists.txt
example/core/: CMakeLists.txt  core.cpp  core.hpp  core_test.cpp  unit.cmake
example/example_app/: CMakeLists.txt  main.cpp  unit.cmake
example/main_entry/: main.cpp  unit.cmake
examples/: CMakeLists.txt
examples/gtest_test_app/: CMakeLists.txt
examples/gtest_test_app/hello_gtest/: hello_gtest.cpp  hello_gtest.hpp  hello_gtest_test.cpp  unit.cmake
examples/math_app/: CMakeLists.txt
examples/math_app/algorithms/: algorithms.cpp  algorithms.hpp  algorithms_test.cpp  unit.cmake
examples/math_app/geometry/: circle.cpp  circle.hpp  circle_test.cpp  line_segment.cpp  line_segment.hpp  line_segment_test.cpp  unit.cmake
examples/math_app/main_entry/: main.cpp  unit.cmake
examples/math_app/math_constants/: constants.hpp  unit.cmake
examples/math_app/math_types/: math_types.cpp  math_types.hpp  math_types_test.cpp  unit.cmake
examples/math_app/statistics/: statistics.cpp  statistics.hpp  statistics_test.cpp  unit.cmake
examples/platform_diff/: CMakeLists.txt
examples/platform_diff/main_entry/: main.cpp  main_win32.cpp  unit.cmake
examples/platform_diff/threading/: scoped_thread.hpp  thread.hpp  thread_name.cpp  thread_name.hpp  unit.cmake
examples/platform_diff/threading/linux/: thread_name.cpp
(+3 files in other folders)
